# FeatFloWer

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CTestConfig.cmake  Description.txt  Dockerfile  GEMINI.md  Hostfile  LiDoscript  Makefile  TESTING_GUIDE.md  archive_force1e-1.sh  attraction_smoother_modularization.md  build_guide.md  calculate_dissipation_integral.f90  cmake_cheat_setup_for_Otto.sh  configure  manual.txt  merger  monitor_scripts.txt  strain_rate_dissipation.f90  update  updateWithFC
applications/: CMakeLists.txt
applications/STLvsTRI/: CMakeLists.txt  STLvsTRI_def.f90  STLvsTRI_main.f90
applications/auto_param/: CMakeLists.txt  bndry.f90  meshproc_def.f90  meshproc_main.f90  param.cfg  param_vtu_mesher.cfg  umbrella.f90
applications/fem_sandbox/: CMakeLists.txt  feat_stubs.f90  fem_sandbox.f90
applications/heat/: CMakeLists.txt  app_init.f90  heat.f90  heat.py  heat_start.py  sensor_temperature_extraction.sh
applications/hypre_test/: CMakeLists.txt  HypreSolver.f90  hypre_test.f90
applications/iniparser_demo/: CMakeLists.txt  parserdemonstration.f90
applications/laplace/: CMakeLists.txt  app_init.f90  laplace.f90  postprocessing.f90
applications/mesh_proc/: CMakeLists.txt  meshproc_PDE.f90  meshproc_def.f90  meshproc_main.f90  param.cfg
applications/mesh_ref/: CMakeLists.txt  RunnerScript.sh  diff.f90  meshref_def.f90  meshref_init.f90  meshref_main.f90  meshref_output.f90  meshref_refine.f90  meshref_var.f90  param.cfg  param_BU.cfg  param_meshref.cfg  runner.sh  templates
applications/mumps_test/: CMakeLists.txt  app_init.f90  defs_include.h  mumps_test.f90  postprocessing.f90
applications/q1_scalar/: CMakeLists.txt  app_init.f90  q1_scalar.f90  q1_scalar_start.py
applications/q1_scalar_melt/: CMakeLists.txt  app_init.f90  q1_scalar_melt.f90
applications/q1_scalar_multimat/: CMakeLists.txt  app_init.f90  q1_scalar_multimat.f90
applications/q1_scalar_partfil/: CMakeLists.txt  app_init.f90  q1_scalar_partfil.f90
applications/q2p1_ATC/: CMakeLists.txt  app_init.f90  q2p1_ATC.f90
applications/q2p1_bench_fluidization/: CMakeLists.txt  app_init.f90  cube.json  q2p1_bench_fluidization.f90
applications/q2p1_bench_sedimentation/: CMakeLists.txt  app_init.f90  q2p1_bench_sedimentation.f90  q2p1_bench_sedimentation.py  start_q2p1_bench_sedimentation
applications/q2p1_bloodflow/: CMakeLists.txt  app_init.f90  q2p1_bloodflow.f90  q2p1_bloodflow.py  q2p1_devel.f90
applications/q2p1_cc/: CMakeLists.txt  app_init.f90  assemblies_cc.f  defs_include.h  iso_assemblies.f  lin_transport_cc.f90  postprocessing.f90  q2p1_cc.f90  q2p1_cc.py  q2p1_cc_umfpacksolver.f90  q2p1_def_cc.f90  q2p1_mg_cc.f90  q2p1_transport_cc.f90  q2p1_var_newton.f90
applications/q2p1_creep/: CMakeLists.txt  app_init.f90  q2p1_creep.f90
applications/q2p1_devel/: CMakeLists.txt  app_init.f90  q2p1_devel.f90  q2p1_devel_start.py
applications/q2p1_devel_temp/: CMakeLists.txt  app_init.f90  q2p1_devel_temp.f90
applications/q2p1_die/: CMakeLists.txt  app_init.f90  conv_check_DIE.sh  partitioner  plot_conv_DIE.gp  q2p1_die.f90  q2p1_die_start.py
applications/q2p1_dkt/: CMakeLists.txt  app_init.f90  q2p1_dkt.f90
applications/q2p1_dns_drag/: CMakeLists.txt  app_init.f90  example.json  monitor_bulk_flow_log.py  monitor_force_log.py  monitoring.md  q2p1_dns_drag.f90  q2p1_fc_ext_start.py  run_q2p1_fc_ext  summarize_dns_drag_case.py
applications/q2p1_drill/: CMakeLists.txt  app_init.f90  example.json  q2p1_drill.f90
applications/q2p1_el_frozen_trace/: CMakeLists.txt  app_init.f90  el_frozen_driver.f90  example.json  q2p1_el_frozen_trace.f90
applications/q2p1_euler_fibers/: CMakeLists.txt  app_init.f90  postprocessing.f90  q2p1_euler_fibers.f90
applications/q2p1_experimental/: CMakeLists.txt  app_init.f90  postprocessing.f90  q2p1_experimental.f90
applications/q2p1_fac3d/: CMakeLists.txt  app_init.f90  q2p1_fac3d.f90  q2p1_fac3d_start.py  run_q2p1_fac3d
applications/q2p1_fac_bench3D/: CMakeLists.txt  q2p1_fac_bench3D.f90  q2p1_fac_bench3D.py
applications/q2p1_fac_nnewt/: CMakeLists.txt  app_init.f90  postprocessing.f90  q2p1_fac_nnewt.f90  q2p1_fac_nnewt.py  start_q2p1_fac_nnewt
applications/q2p1_fac_visco/: CMakeLists.txt  app_init.f90  q2p1_fac_visco.f90  q2p1_fac_visco.py
applications/q2p1_fbm_spring/: CMakeLists.txt  app_init.f90  defs_include.h  postprocessing.f90  q2p1_fbm_spring.f90
applications/q2p1_fc2/: CMakeLists.txt  app_init.f90  q2p1_fc2.f90  test-config.xml
applications/q2p1_fc_ext/: CMakeLists.txt  app_init.f90  defs_include.h  fc_ext_start.py  postprocessing.f90  q2p1_fac_3D.py  q2p1_fc_ext.f90  q2p1_fc_ext.py  q2p1_fc_ext_start.py  run_q2p1_fc_ext  start_q2p1_fc_ext
applications/q2p1_fsi_bench/: CMakeLists.txt  app_init.f90  q2p1_fsi_bench.f90
applications/q2p1_fsi_spring/: CMakeLists.txt  app_init.f90  q2p1_fsi_spring.f90
applications/q2p1_geom_test/: CMakeLists.txt  app_init.f90  q2p1_geom_test.f90  q2p1_geom_test.py
applications/q2p1_hashgrid_test/: CMakeLists.txt  README.md  app_init.f90  q2p1_hashgrid_test.f90  run_test.sh
applications/q2p1_lubrication_lab/: CMakeLists.txt  app_init.f90  example.json  q2p1_lubrication_lab.f90
applications/q2p1_movbc/: CMakeLists.txt  app_init.f90  q2p1_movbc.f90  q2p1_movbc_start.py
applications/q2p1_optic_tweezers/: CMakeLists.txt  app_init.f90  q2p1_optic_tweezers.f90
applications/q2p1_parallel_time/: CMakeLists.txt  app_init.f90  q2p1_parallel_time.f90  q2p1_parallel_time.py
applications/q2p1_particle_tracer/: CMakeLists.txt  app_init.f90  part_input.f90  part_step.f90  part_tracer.f90  q2p1_particle_tracer.f90
applications/q2p1_particle_tracer_xse/: CMakeLists.txt  app_init.f90  q2p1_particle_tracer.f90
applications/q2p1_particles/: CMakeLists.txt  app_init.f90  driven_cavity.ipynb  postprocessing.f90  q2p1_particles.f90  test.json
applications/q2p1_rotation/: CMakeLists.txt  app_init.f90
applications/q2p1_sedimentation/: CMakeLists.txt  app_init.f90  q2p1_sedimentation.f90
applications/q2p1_span/: CMakeLists.txt  app_init.f90
docs/: CONTAINER.md  (+1 more)
(+685 files in other folders)
